// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Find the route by the location. 1`] = `
Route {
  "component": undefined,
  "isAbstract": false,
  "matchPattern": "/users/([\\\\w-]{20})/projects",
  "matchReg": /\\^\\\\/users\\\\/\\(\\[\\\\w-\\]\\{20\\}\\)\\\\/projects\\$/,
  "name": "web",
  "onEnter": undefined,
  "parents": Array [],
  "resolve": Object {},
  "uri": "/users/{userId:[\\\\w-]{20}}/projects?index?sort",
  "uriParamKeys": Array [
    "userId",
    "?index",
    "?sort",
  ],
  "uriTemplate": "/users/{userId}/projects",
}
`;

exports[`Find the route by the name. 1`] = `
Route {
  "component": undefined,
  "isAbstract": false,
  "matchPattern": "/",
  "matchReg": /\\^\\\\/\\$/,
  "name": "web",
  "onEnter": undefined,
  "parents": Array [],
  "resolve": Object {},
  "uri": "/",
  "uriParamKeys": Array [],
  "uriTemplate": "/",
}
`;

exports[`Generate a route without the parent. 1`] = `
Route {
  "component": [Function],
  "isAbstract": false,
  "matchPattern": "/users/([\\\\w-]{20})/projects",
  "matchReg": /\\^\\\\/users\\\\/\\(\\[\\\\w-\\]\\{20\\}\\)\\\\/projects\\$/,
  "name": "web",
  "onEnter": [Function],
  "parents": Array [],
  "resolve": Object {
    "id": [Function],
  },
  "uri": "/users/{userId:[\\\\w-]{20}}/projects?index?sort",
  "uriParamKeys": Array [
    "userId",
    "?index",
    "?sort",
  ],
  "uriTemplate": "/users/{userId}/projects",
}
`;

exports[`Get the current route. 1`] = `
Route {
  "component": undefined,
  "isAbstract": false,
  "matchPattern": "/",
  "matchReg": /\\^\\\\/\\$/,
  "name": "web",
  "onEnter": undefined,
  "parents": Array [],
  "resolve": Object {},
  "uri": "/",
  "uriParamKeys": Array [],
  "uriTemplate": "/",
}
`;
